# CheckersLib

./: CMakeLists.txt  Checkers_Board.cpp  Checkers_Board.h  library.h
